# homelab

./: .ansible-lint  .editorconfig  .env.example  .env.pirate.example  .gitignore  .kube-linter.yaml  .prettierignore  .prettierrc  .terraform.lock.hcl  .yamllint.yaml  Makefile  README.md  TODO.md  ansible.cfg  apply.just  check.just  delete.just  docker-compose.auth.yml  docker-compose.chat.yml  docker-compose.dash.yml  docker-compose.dev.yml  docker-compose.docker.yml  docker-compose.media.yml  docker-compose.misc.yml  docker-compose.monitor.yml  docker-compose.network.yml  docker-compose.pirate.yml  docker-compose.proxy.yml  docker-compose.stream.yml  docker-compose.vpn.yml  docker-compose.web.yml  get.just  install.just  inventory.py  inventory.yaml  justfile  main.tf  operations.py  package.json  play.just  (+13 more)
config/authelia/: readme.txt
config/dashboard/: apps.json
config/flame/: readme.txt
config/owncast/: readme.txt
config/proxy/: traefik.yml
config/redis/: readme.txt
config/traefik/: traefik.yml
group_data/: all.py  bare_metal.yaml
manifests/: kustomization.yaml
manifests/busybox/: deployment.yaml  kustomization.yaml  pvc.yaml
manifests/calibre-web/: deployment.yaml  kustomization.yaml  service.yaml
manifests/cilium/: gateway-api.yaml  (+7 more)
modules/: README.md  apply.just  apply.secret.just  check.just  delete.just  get.just  get.secret.just  install.just  login.just  play.just  run.just
playbooks/: homelab-bootstrap.yaml  homelab-teardown.yaml  homelab.yaml  kubeconfig.yaml  proxmox-bootstrap.yaml  proxmox.yaml  rpi1-bootstrap.yaml  rpi1.yaml
(+329 files in other folders)
